# AndGen

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md
CMake/: GoogleTest.cmake
include/AndGen/Editor/: EditorApplication.hpp
include/AndGen/Engine/: CommandLineArguments.hpp
include/AndGen/Engine/Exceptions/: NotImplementedException.hpp
include/AndGen/Engine/Jobs/: Job.hpp
src/Editor/: CMakeLists.txt  EditorApplication.cpp  main.cpp
src/Engine/: CMakeLists.txt  CommandLineArguments.cpp
src/Engine/Concurrency/: PooledThread.cpp  PooledThread.hpp  ThreadNotifier.hpp
src/Engine/Jobs/: Job.cpp  JobQueue.cpp  JobQueue.hpp
src/Engine/Parallelism/: PooledThread.cpp  PooledThread.hpp  ThreadNotifier.cpp  ThreadPool.cpp  ThreadPool.hpp
test/Editor/: CMakeLists.txt
test/Engine/: CMakeLists.txt  CommandLineArgumentsTests.cpp
test/Engine/Concurrency/: PooledThreadTests.cpp  ThreadNotifierTests.cpp
test/Engine/Jobs/: JobQueueTests.cpp  JobTests.cpp
test/Engine/Parallelism/: PooledThreadTests.cpp  ThreadNotifierTests.cpp  ThreadPoolTests.cpp  TimedJob.hpp
